<resources>
    <string name="app_name">Shavanti</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="count_words_part1">我们在一起</string>
    <string name="count_words_part2">天啦!</string>

    <string name="date_format">yyyy年MM月dd日</string>
    <string name="date_format2">yyyy.MM.dd</string>
    <string name="date_demo">2018年2月14日</string>
    <string name="joke_title_demo">每日一笑</string>
    <string name="joke_demo">这是一段文字</string>
    <string name="joke_title">每日一笑</string>
    <string name="scrolled_to_bottom">已经到底了哦~</string>
    <string name="funny_pic_title">每日一趣</string>
    <string name="news_title">每日头条</string>
    <string name="one_pic_title">每日一个</string>
    <string name="one_article_title">每日一文</string>
    <string name="not_found_note">404 Not Found</string>
    <string name="one">「ONE · 一个」</string>
    <string name="author_pre">作者/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_more">查看更多</string>
    <string name="save_pic">保存图片</string>
    <string name="share_pic">分享图片</string>
    <string name="share_to">分享到</string>
    <string name="file_format_wrong">文件格式错误</string>
    <string name="file_save_to">文件保存到：</string>
    <string name="share">分享</string>
    <string name="more">更多</string>
    <string name="n">8e885c91834140ce05bd77250277fdcb</string>
    <string name="simple_news">极简新闻</string>
    <string name="bookmark">收藏</string>
    <string name="news_date_demo">2018-03-01 10:39</string>
    <string name="news_author_demo">看看新闻网</string>
    <string name="news_update_count_part1">更新了</string>
    <string name="news_update_count_part2">篇新闻</string>
    <string name="clear_cache">清除缓存</string>
    <string name="remind">提示</string>
    <string name="clear_news_cache_message">是否清除已缓存的新闻？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="cache_clear_hint_part1">清除了</string>
    <string name="cache_clear_hint_part2">条数据</string>
    <string name="no_cache_to_clear">数据库很干净哟</string>
</resources>
