<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/simple_news_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/simple_news"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <LinearLayout
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_date_demo"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/news_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/news_author_demo"
            android:textSize="12sp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="20dp"
        android:background="@color/line_gray"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"/>
</LinearLayout>