<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/laifudao_ico"
                android:layout_width="20dp"
                android:layout_height="20dp" />
            <me.codekiller.com.shavanti.View.CustomViews.HandWriteTextView
                android:id="@+id/type"
                android:text="@string/joke_title_demo"
                android:gravity="center_vertical"
                android:textColor="@color/laifudao_ico_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:gravity="center"
            android:text="@string/joke_title_demo"
            android:maxLines="1"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/content"
            android:text="@string/joke_demo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/line_gray"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <TextView
            android:id="@+id/check_more"
            android:text="@string/check_more"
            android:textColor="@color/laifudao_ico_blue"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v7.widget.CardView>